--- a/aliem/styles/style.styl
+++ b/aliem/styles/style.styl
@@ -55,3 +55,11 @@ table
         td
             text-align: justify
             padding: 0 0.8em
+
+
+@media (max-width: 800px)
+    table
+        position: relative
+        display: block
+        max-width: 100%
+        overflow-x: scroll
